# pc-sigs

./: CMakeLists.txt  LICENSE  README.md  build.sh  linkpcsig_bench.cpp  pcsig_bench.cpp
GS/: CMakeLists.txt  gs.cpp  gs.h
demo/: demo.html  demo.js
lib/: CMakeLists.txt  linkpcsig.cpp  linkpcsig.h  pcsig.cpp  pcsig.h
src/: gs.h  pcsig_bench.cpp
